Define yx-bind separately for every box

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -5,7 +5,6 @@ set folder = "~/mail/raw/outlook/"
 set record = ""  # outlook auto-registers sent mail
 set trash = "+.Deleted"
 set postponed = "+.Drafts"
-set my_archive_dir = "+.x.001"
 
 named-mailboxes \
     "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
@@ -16,6 +15,11 @@ virtual-mailboxes \
     "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
     "_OUTLOOK_X" "notmuch://?query=folder:outlook/\.x\.001" \
     "_OUTLOOK_Y" "notmuch://?query=folder:/outlook/\.x\./ and not folder:outlook/\.x\.001"
+
+macro index yx "\
+<tag-prefix>\
+<save-message>$folder/.x.001\
+" "move to box"
 # }}}
 
 # write {{{
