--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -5,7 +5,6 @@ set folder = "~/mail/raw/eth/"
 set record = "+.Skickat"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
-set my_archive_dir = "+.x.001"
 
 named-mailboxes \
     "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
@@ -16,6 +15,11 @@ virtual-mailboxes \
     "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
     "_ETH_X" "notmuch://?query=folder:eth/\.x\.001" \
     "_ETH_Y" "notmuch://?query=folder:/eth/\.x\./ and not folder:eth/\.x\.001"
+
+macro index yx "\
+<tag-prefix>\
+<save-message>$folder/.x.001\
+" "move to box"
 # }}}
 
 # write {{{
