--- a/.config/neomutt/box/real/xyz.conf
+++ b/.config/neomutt/box/real/xyz.conf
@@ -5,7 +5,6 @@ set folder = "~/mail/raw/xyz/"
 set record = "+.Sent"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
-set my_archive_dir = "+.Folders.x"
 
 named-mailboxes \
     "XYZ_TRASH" "~/mail/raw/xyz/.Trash/" \
@@ -16,6 +15,11 @@ virtual-mailboxes \
     "_XYZ_SENT" "notmuch://?query=folder:xyz/.Sent" \
     "_XYZ_X" "notmuch://?query=folder:xyz/.Folders.x" \
     "_XYZ_Y" "notmuch://?query=folder:/xyz/\.Folders\.z\./"
+
+macro index yx "\
+<tag-prefix>\
+<save-message>$folder/.Folders.x\
+" "move to box"
 # }}}
 
 # write {{{
