--- a/.config/neomutt/box/box.conf
+++ b/.config/neomutt/box/box.conf
@@ -2,17 +2,17 @@ source "~/.config/neomutt/box/virtual/notmuch.conf"
 
 set my_xyz_conf = "~/.config/neomutt/box/real/xyz.conf"
 source $my_xyz_conf
-folder-hook $folder "source $my_xyz_conf"
+folder-hook mail/raw/xyz "source $my_xyz_conf"
 folder-hook _XYZ.* "source $my_xyz_conf"
 
 set my_eth_conf = "~/.config/neomutt/box/real/eth.conf"
 source $my_eth_conf
-folder-hook $folder "source $my_eth_conf"
+folder-hook mail/raw/eth "source $my_eth_conf"
 folder-hook _ETH.* "source $my_eth_conf"
 
 set my_outlook_conf = "~/.config/neomutt/box/real/outlook.conf"
 source $my_outlook_conf
-folder-hook $folder "source $my_outlook_conf"
+folder-hook mail/raw/outlook "source $my_outlook_conf"
 folder-hook _OUTLOOK.* "source $my_outlook_conf"
 
 # vim: filetype=neomuttrc foldmethod=marker
