Separate box set'g&unset'g

--- a/.config/neomutt/box/specific/eth/bind.conf
+++ b/.config/neomutt/box/specific/eth/bind.conf
@@ -1,3 +1,8 @@
+macro index ce \
+"<enter-command>source ~/.config/neomutt/box/real/eth.conf<Return>\
+<check-stats>\
+" "eth info"
+
 macro index see "\
 sm\
 <shell-escape> mbsync -V ETH_\
