--- a/.config/neomutt/box/specific/outlook/bind.conf
+++ b/.config/neomutt/box/specific/outlook/bind.conf
@@ -1,3 +1,8 @@
+macro index co \
+"<enter-command>source ~/.config/neomutt/box/real/outlook.conf<Return>\
+<check-stats>\
+" "outlook info"
+
 macro index soo "\
 sm\
 <shell-escape> mbsync -V OUTLOOK_\
