Group auto.conf for eth

--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -22,4 +22,18 @@ sm\
 ss\
 " "push eth-x"
 
+named-mailboxes \
+    "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
+
+virtual-mailboxes \
+    "_ETH" "notmuch://?query=folder:/eth/" \
+    "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
+    "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
+    "_ETH_X" "notmuch://?query=folder:eth/\.x\.001" \
+    "_ETH_Y" "notmuch://?query=folder:/eth/\.x\./ and not folder:eth/\.x\.001"
+
+set my_eth_conf = "~/.config/neomutt/box/real/eth.conf"
+folder-hook mail/raw/eth "source $my_eth_conf"
+folder-hook _ETH_ "source $my_eth_conf"
+
 # vim: filetype=neomuttrc foldmethod=marker
