Separate common/compose.conf

--- a/.config/neomutt/box/common/compose.conf
+++ b/.config/neomutt/box/common/compose.conf
@@ -1,3 +1,7 @@
+set real_name = "Shengdi 'shc' Chen"
+set signature = "~/.config/neomutt/box/common/common.sig"
+
+# header {{{
 # SOURCE:
 #   RFC2076
 #   ISO 639-1
@@ -13,5 +17,6 @@ neomutt/`neomutt -v | head -n 1 | sed -e 's/.* \([0-9]*\)/\1/'` (`uname -s` `una
 
 my_hdr Content-Language: \
 en,fr-CH,de-CH,ru,sv,it,sp-ES,ar-EG,zh-CN,zh-HK,jp,pt-PT
+# }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
