--- a/.config/neomutt/box/specific/eth/eth.conf
+++ b/.config/neomutt/box/specific/eth/eth.conf
@@ -12,15 +12,12 @@ macro index yx "\
 " "move to box"
 # }}}
 
-# write {{{
-set real_name = "Shengdi 'shc' Chen"
+# compose {{{
+source "~/.config/neomutt/box/common/compose.conf"
+
 set my_mail_addr = "shenchen@ethz.ch"
-
 set from = "$my_mail_addr"
-source "~/.config/neomutt/box/common/header.conf"
 my_hdr Reply-To: "$my_mail_addr"
-
-set signature = "~/.config/neomutt/box/common/common.sig"
 
 set sendmail = "msmtp -a eth"
 # }}}
