Correct conf-dir for specific boxes

--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -1,7 +1,14 @@
+# source {{{
+set my_conf = "~/.config/neomutt/box/specific/eth/eth.conf"
+
+folder-hook mail/raw/eth "source $my_conf"
+folder-hook _ETH_ "source $my_conf"
+
 macro index ce \
-"<enter-command>source ~/.config/neomutt/box/real/eth.conf<Return>\
+"<enter-command>source $my_conf<Return>\
 <check-stats>\
 " "eth info"
+# }}}
 
 macro index see "\
 sm\
@@ -31,9 +38,5 @@ virtual-mailboxes \
     "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
     "_ETH_X" "notmuch://?query=folder:eth/\.x\.001" \
     "_ETH_Y" "notmuch://?query=folder:/eth/\.x\./ and not folder:eth/\.x\.001"
-
-set my_eth_conf = "~/.config/neomutt/box/real/eth.conf"
-folder-hook mail/raw/eth "source $my_eth_conf"
-folder-hook _ETH_ "source $my_eth_conf"
 
 # vim: filetype=neomuttrc foldmethod=marker
