--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -1,7 +1,14 @@
+# source {{{
+set my_conf = "~/.config/neomutt/box/specific/outlook/outlook.conf"
+
+folder-hook mail/raw/outlook "source $my_conf"
+folder-hook _OUTLOOK_ "source $my_conf"
+
 macro index co \
-"<enter-command>source ~/.config/neomutt/box/real/outlook.conf<Return>\
+"<enter-command>source $my_conf<Return>\
 <check-stats>\
 " "outlook info"
+# }}}
 
 macro index soo "\
 sm\
@@ -31,9 +38,5 @@ virtual-mailboxes \
     "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
     "_OUTLOOK_X" "notmuch://?query=folder:outlook/\.x\.001" \
     "_OUTLOOK_Y" "notmuch://?query=folder:/outlook/\.x\./ and not folder:outlook/\.x\.001"
-
-set my_outlook_conf = "~/.config/neomutt/box/real/outlook.conf"
-folder-hook mail/raw/outlook "source $my_outlook_conf"
-folder-hook _OUTLOOK_ "source $my_outlook_conf"
 
 # vim: filetype=neomuttrc foldmethod=marker
