--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -1,3 +1,10 @@
+# source {{{
+set my_conf = "~/.config/neomutt/box/specific/xyz/xyz.conf"
+
+folder-hook mail/raw/xyz "source $my_conf"
+folder-hook _XYZ_ "source $my_conf"
+# }}}
+
 named-mailboxes \
     "XYZ_TRASH" "~/mail/raw/xyz/.Trash/" \
 
@@ -7,9 +14,5 @@ virtual-mailboxes \
     "_XYZ_SENT" "notmuch://?query=folder:xyz/.Sent" \
     "_XYZ_X" "notmuch://?query=folder:xyz/.Folders.x" \
     "_XYZ_Y" "notmuch://?query=folder:/xyz/\.Folders\.z\./"
-
-set my_xyz_conf = "~/.config/neomutt/box/real/xyz.conf"
-folder-hook mail/raw/xyz "source $my_xyz_conf"
-folder-hook _XYZ_ "source $my_xyz_conf"
 
 # vim: filetype=neomuttrc foldmethod=marker
