Set&unset detailed boxes directly in bind

--- a/.config/neomutt/box/specific/set_unset.conf
+++ b/.config/neomutt/box/specific/set_unset.conf
@@ -1,12 +1,26 @@
-macro index ca \
-"<enter-command>source ~/.config/neomutt/box/real/eth_box_set.conf<Return>\
-<enter-command>source ~/.config/neomutt/box/real/outlook_box_set.conf<Return>\
+macro index ca "\
+<enter-command>\
+named-mailboxes \
+"ETH_INBOX" "~/mail/raw/eth/.INBOX/" \
+"ETH_SENT" "~/mail/raw/eth/.Skickat/" \
+"ETH_DRAFT" "~/mail/raw/eth/.Drafts/" \
+"OUTLOOK_INBOX" ~/mail/raw/outlook/.INBOX/ \
+"OUTLOOK_SENT" ~/mail/raw/outlook/.Sent/ \
+"OUTLOOK_DRAFT" ~/mail/raw/outlook/.Drafts/ \
+<Return>\
 <check-stats>\
 " "box all"
 
-macro index cA \
-"<enter-command>source ~/.config/neomutt/box/real/eth_box_unset.conf<Return>\
-<enter-command>source ~/.config/neomutt/box/real/outlook_box_unset.conf<Return>\
+macro index cA "\
+<enter-command>\
+unmailboxes \
+"~/mail/raw/eth/.INBOX" \
+"~/mail/raw/eth/.Skickat" \
+"~/mail/raw/eth/.Drafts" \
+~/mail/raw/outlook/.INBOX \
+~/mail/raw/outlook/.Sent \
+~/mail/raw/outlook/.Drafts \
+<Return>\
 <check-stats>\
 " "unbox all"
 
