Set placeholder |folder| in common/box.conf

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -1,3 +1,6 @@
+# placeholder (to silence warning upon launch)
+set folder = "~/mail/raw/"
+
 set mbox_type = Maildir
 
 # vim: filetype=neomuttrc foldmethod=marker
