Move |mark_old=no| to common/box.conf

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -3,4 +3,7 @@ set folder = "~/mail/raw/"
 
 set mbox_type = Maildir
 
+# do NOT distinguish |old| from unread/new
+set mark_old = no
+
 # vim: filetype=neomuttrc foldmethod=marker
