--- a/.fdm.conf
+++ b/.fdm.conf
@@ -7,11 +7,7 @@ action "inbox"
 
 # eth {{{
 account "eth"
-    imaps
-    server "mail.ethz.ch"
-    port 993
-    user "shenchen@ethz.ch"
-    pass $(gpg -dq ~/mail/pw/eth.gpg)
+    maildirs "${path}/eth"
 
 $path_eth = "${path}/eth"
 action "eth_inbox"
@@ -24,11 +20,7 @@ match
 
 # outlook {{{
 account "outlook"
-    imaps
-    server "outlook.office365.com"
-    port 993
-    user "shengdi@outlook.de"
-    pass $(gpg -dq ~/mail/pw/outlook.gpg)
+    maildirs "${path}/outlook"
 
 $path_outlook = "${path}/outlook"
 action "outlook_inbox"
