Add account for xyz

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -5,6 +5,19 @@ action "inbox"
     maildir "${path}/Inbox"
 # }}}
 
+# xyz {{{
+account "xyz"
+    maildirs "${path}/xyz"
+
+$path_xyz = "${path}/xyz"
+action "xyz_inbox"
+    maildir "${path_xyz}"
+
+match
+    account "xyz"
+    action "xyz_inbox"
+# }}}
+
 # eth {{{
 account "eth"
     maildirs "${path}/eth"
