Use INBOX-dir for accounts

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -6,28 +6,28 @@ action "inbox"
 # }}}
 
 # xyz {{{
-account "xyz"
-    maildirs "${path}/xyz"
-
 $path_xyz = "${path}/xyz"
+account "xyz"
+    maildirs "${path_xyz}/.INBOX/"
+
 action "xyz_inbox"
     maildir "${path_xyz}"
 # }}}
 
 # eth {{{
-account "eth"
-    maildirs "${path}/eth"
-
 $path_eth = "${path}/eth"
+account "eth"
+    maildirs "${path_eth}/.INBOX/"
+
 action "eth_inbox"
     maildir "${path_eth}"
 # }}}
 
 # outlook {{{
-account "outlook"
-    maildirs "${path}/outlook"
-
 $path_outlook = "${path}/outlook"
+account "outlook"
+    maildirs "${path_outlook}/.INBOX/"
+
 action "outlook_inbox"
     maildir "${path_outlook}"
 # }}}
