Default to |keep|

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -3,6 +3,9 @@ $path = "%h/mail/raw/"
 
 action "inbox"
     maildir "${path}/Inbox"
+
+action "keep"
+    keep
 # }}}
 
 # xyz {{{
@@ -33,8 +36,8 @@ action "outlook_inbox"
 # }}}
 
 # catch all
-#   match
-#       all
-#       action "inbox"
+match
+    all
+    action "keep"
 
 # vim: filetype=conf foldmethod=marker
