Add (exist'g) spam-list from outlook

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -38,6 +38,22 @@ action "outlook_inbox"
     maildir "${path_outlook}"
 # }}}
 
+match
+    "^From:.*@.*kraftangan\.gov\.my" in headers or
+    "^From:.*@.*kollect\.ai.*" in headers or
+    "^From:.*@.*transfiriendo\.com.*" in headers or
+    "^From:.*@.*fibrasil\.com.*" in headers or
+    "^From:.*@.*norton\.com.*" in headers or
+    "^From:.*@.*novaorion\.com.*" in headers or
+    "^From:.*@.*apparelsite\.net.*" in headers or
+    "^From:.*@.*farmleap\.com.*" in headers or
+    "^From:.*@.*yfhuorwa\.com.*" in headers or
+    "^From:.*@.*moneypeny\.fr.*" in headers or
+    "^From:.*@.*ronquilloassociates\.com.*" in headers or
+    "^From:.*@.*preapp1003\.com.*" in headers or
+    "^From:.*@.*magnusmonitors\.com.*" in headers
+    action "drop"
+
 # catch all
 match
     all
