Add vim-fold for spam-list

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -38,6 +38,8 @@ action "outlook_inbox"
     maildir "${path_outlook}"
 # }}}
 
+# delete {{{
+# spam
 match
     "^From:.*@.*kraftangan\.gov\.my" in headers or
     "^From:.*@.*kollect\.ai.*" in headers or
@@ -53,6 +55,7 @@ match
     "^From:.*@.*preapp1003\.com.*" in headers or
     "^From:.*@.*magnusmonitors\.com.*" in headers
     action "drop"
+# }}}
 
 # catch all
 match
