--- a/.fdm.conf
+++ b/.fdm.conf
@@ -7,7 +7,7 @@ action "inbox"
 action "keep"
     keep
 
-action "drop"
+action "delete"
     drop
 # }}}
 
@@ -54,7 +54,7 @@ match
     "^From:.*@.*ronquilloassociates\.com.*" in headers or
     "^From:.*@.*preapp1003\.com.*" in headers or
     "^From:.*@.*magnusmonitors\.com.*" in headers
-    action "drop"
+    action "delete"
 # }}}
 
 # catch all
