Bind dD to |purge-message|

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -181,7 +181,7 @@ macro index dd "\
 
 macro index dD "\
 <tag-prefix>\
-<delete-message>\
+<purge-message>\
 <sync-mailbox><Return><check-stats>\
 ss\
 " "delete!"
