Reformat long-line for d>

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -188,7 +188,10 @@ ss\
 
 bind index d. delete-pattern
 bind index d, undelete-pattern
-macro index d> <delete-pattern>.<Return><sync-mailbox><Return><check-stats> "delete *!"
+macro index d> "\
+<delete-pattern>.<Return>\
+<sync-mailbox><Return><check-stats>\
+" "delete *!"
 
 macro index du "\
 <tag-prefix>\
