Bind d> to purge-all

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -189,9 +189,9 @@ ss\
 bind index d. delete-pattern
 bind index d, undelete-pattern
 macro index d> "\
-<delete-pattern>.<Return>\
-<sync-mailbox><Return><check-stats>\
-" "delete *!"
+<tag-pattern>.<Return>\
+dD\
+" "delete! *"
 
 macro index du "\
 <tag-prefix>\
