Use eth/x&eth/z for archived&todo

--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -6,7 +6,7 @@ set postponed = "+.Drafts"
 
 macro index yx "\
 <tag-prefix>\
-<save-message>$folder/.x.001\
+<save-message>$folder/.x\
 " "move to box"
 # }}}
 
