Keep only |se| as bind for sync'g eth

--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -10,24 +10,13 @@ macro index ce \
 " "eth info"
 # }}}
 
-macro index see "\
-sm\
-<shell-escape> mbsync -V ETH_\
-" "push eth-?"
-macro index ses "\
+macro index se "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -V ETH_SYS<Return>\
+<shell-escape> mbsync -V ETH_ALL<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "push eth-sys"
-macro index sex "\
-sm\
-<enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -V ETH_X<Return>\
-<enter-command>set wait_key=yes<Return>\
-ss\
-" "push eth-x"
+" "push eth"
 
 named-mailboxes \
     "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
