Keep only |so| as bind for sync'g outlook

--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -10,24 +10,13 @@ macro index co \
 " "outlook info"
 # }}}
 
-macro index soo "\
-sm\
-<shell-escape> mbsync -V OUTLOOK_\
-" "push outlook-?"
-macro index sos "\
+macro index so "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -V OUTLOOK_SYS<Return>\
+<shell-escape> mbsync -V OUTLOOK_ALL<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
-" "push outlook-sys"
-macro index sox "\
-sm\
-<enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -V OUTLOOK_X<Return>\
-<enter-command>set wait_key=yes<Return>\
-ss\
-" "push outlook-x"
+" "push outlook"
 
 named-mailboxes \
     "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
