Use _SENT flag for nm-SENT boxes queries

--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -24,7 +24,7 @@ named-mailboxes \
 virtual-mailboxes \
     "_OUTLOOK" "notmuch://?query=folder:/outlook/" \
     "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
-    "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
+    "_OUTLOOK_SENT" "notmuch://?query=folder:/outlook/ and tag:_SENT" \
     "_OUTLOOK_X" "notmuch://?query=folder:outlook/.x"
 
 # vim: filetype=neomuttrc foldmethod=marker
