--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -11,7 +11,7 @@ named-mailboxes \
 virtual-mailboxes \
     "_XYZ" "notmuch://?query=folder:/xyz/" \
     "_XYZ_INBOX" "notmuch://?query=folder:xyz/.INBOX" \
-    "_XYZ_SENT" "notmuch://?query=folder:xyz/.Sent" \
+    "_XYZ_SENT" "notmuch://?query=folder:/xyz/ and tag:_SENT" \
     "_XYZ_X" "notmuch://?query=folder:xyz/.Folders.x" \
     "_XYZ_Y" "notmuch://?query=folder:/xyz/\.Folders\.z\./"
 
