--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -24,7 +24,7 @@ named-mailboxes \
 virtual-mailboxes \
     "_ETH" "notmuch://?query=folder:/eth/" \
     "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
-    "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
+    "_ETH_SENT" "notmuch://?query=folder:/eth/ and tag:_SENT" \
     "_ETH_X" "notmuch://?query=folder:eth/.x" \
     "_ETH_Z" "notmuch://?query=folder:eth/.z"
 
