Hide |_SENT|-flag in mutt

--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -4,7 +4,8 @@ set nm_default_url = "notmuch:///home/main/mail/raw"
 set hidden_tags = \
 "_ATTACHMENT,_SIGNED,_ENCRYPTED,\
 unread,replied,draft,flagged,passed,\
-_SYS,_X"
+_SYS,_X,\
+_SENT"
 
 virtual-mailboxes \
     "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX" \
