Remove nm-box for UNREAD

--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -9,7 +9,6 @@ _SENT"
 
 virtual-mailboxes \
     "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX" \
-    "MAIN" "notmuch://?query=tag:MAIN" \
-    "UNREAD" "notmuch://?query=tag:unread"
+    "MAIN" "notmuch://?query=tag:MAIN"
 
 # vim: filetype=neomuttrc foldmethod=marker
