Use regex for cross-account nm-|INBOX|

--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -8,7 +8,7 @@ _SYS,_X,\
 _SENT"
 
 virtual-mailboxes \
-    "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX" \
+    "INBOX" "notmuch://?query=folder:/\/\.INBOX/" \
     "MAIN" "notmuch://?query=tag:MAIN"
 
 # vim: filetype=neomuttrc foldmethod=marker
