Add box-agnostic |sr|-bind for sync'g with remote

--- a/.config/neomutt/box/specific/xyz/specific.conf
+++ b/.config/neomutt/box/specific/xyz/specific.conf
@@ -10,6 +10,14 @@ macro index yx "\
 " "move to box"
 # }}}
 
+macro index sr "\
+sm\
+<enter-command>set wait_key=no<Return>\
+<shell-escape> mbsync -V XYZ_ALL<Return>\
+<enter-command>set wait_key=yes<Return>\
+ss\
+" "push to remote"
+
 # compose {{{
 source "~/.config/neomutt/box/common/compose.conf"
 
