Add |sa|-bind to sync all with isync

--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -24,4 +24,12 @@ unmailboxes \
 <check-stats>\
 " "unbox all"
 
+macro index sa "\
+sm\
+<enter-command>set wait_key=no<Return>\
+<shell-escape> mbsync -V ALL<Return>\
+<enter-command>set wait_key=yes<Return>\
+ss\
+" "push *-INBOX "
+
 # vim: filetype=neomuttrc foldmethod=marker
