Use global mail-raw-dir for all accounts

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -1,5 +1,6 @@
+set my_mail_raw_path = "$HOME/mail/raw/"
 # placeholder (to silence warning upon launch)
-set folder = "~/mail/raw/"
+set folder = $my_mail_raw_path
 
 set mbox_type = Maildir
 
