--- a/.config/neomutt/box/specific/xyz/specific.conf
+++ b/.config/neomutt/box/specific/xyz/specific.conf
@@ -1,5 +1,6 @@
 # box {{{
-set folder = "~/mail/raw/xyz/"
+set my_box_relative_path = "xyz"
+set folder = $my_mail_raw_path/$my_box_relative_path
 set record = "+.Sent"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
