--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -1,5 +1,6 @@
 # box {{{
-set folder = "~/mail/raw/eth/"
+set my_box_relative_path = "eth"
+set folder = $my_mail_raw_path/$my_box_relative_path
 set record = "+.Skickat"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
