--- a/.config/neomutt/box/specific/outlook/specific.conf
+++ b/.config/neomutt/box/specific/outlook/specific.conf
@@ -1,5 +1,6 @@
 # box {{{
-set folder = "~/mail/raw/outlook/"
+set my_box_relative_path = "outlook"
+set folder = $my_mail_raw_path/$my_box_relative_path
 set record = ""  # outlook auto-registers sent mail
 set trash = "+.Deleted"
 set postponed = "+.Drafts"
