Use global mail-raw-dir for notmuch-db location

--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -1,4 +1,4 @@
-set nm_default_url = "notmuch:///home/main/mail/raw"
+set nm_default_url = "notmuch://$my_mail_raw_path/"
 
 # exclude these (implicit) tags from %g
 set hidden_tags = \
