Add box-specific nm-query

--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -19,6 +19,12 @@ sm\
 ss\
 " "push to remote"
 
+macro index /b "\
+<enter-command>\
+exec vfolder-from-query<Return>\
+folder:/$my_box_relative_path/ and \
+" "query box"
+
 # compose {{{
 source "~/.config/neomutt/box/common/compose.conf"
 
