--- a/.config/neomutt/box/specific/xyz/specific.conf
+++ b/.config/neomutt/box/specific/xyz/specific.conf
@@ -1,7 +1,7 @@
 # box {{{
 set my_box_relative_path = "xyz"
 set folder = $my_mail_raw_path/$my_box_relative_path
-set record = "+.Sent"
+set record = ""  # proton auto-registers sent mail
 set trash = "+.Trash"
 set postponed = "+.Drafts"
 
