Add more spam-addresses

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -56,7 +56,12 @@ match
     "^From:.*@.*moneypeny\.fr.*" in headers or
     "^From:.*@.*ronquilloassociates\.com.*" in headers or
     "^From:.*@.*preapp1003\.com.*" in headers or
-    "^From:.*@.*magnusmonitors\.com.*" in headers
+    "^From:.*@.*magnusmonitors\.com.*" in headers or
+    "^From:.*@.*oasdehe.com.*" in headers or
+    "^From:.*@email.wolfram.com.*" in headers or
+    "^From:.*@go.mathworks.com.*" in headers or
+    "^From:.*@sion.ais.ne.jp.*" in headers or
+    "^From:apis@tisknise.cz" in headers
     action "delete"
 # }}}
 
