Rename var for raw-mail-dir for fdm

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -1,8 +1,8 @@
 # common {{{
-$path = "%h/mail/raw/"
+$raw_dir = "%h/mail/raw/"
 
 action "inbox"
-    maildir "${path}/Inbox"
+    maildir "${raw_dir}/Inbox"
 
 action "keep"
     keep
@@ -15,7 +15,7 @@ action "print"
 # }}}
 
 # xyz {{{
-$path_xyz = "${path}/xyz"
+$path_xyz = "${raw_dir}/xyz"
 account "xyz"
     maildirs "${path_xyz}/.INBOX/"
 
@@ -24,7 +24,7 @@ action "xyz_inbox"
 # }}}
 
 # eth {{{
-$path_eth = "${path}/eth"
+$path_eth = "${raw_dir}/eth"
 account "eth"
     maildirs "${path_eth}/.INBOX/"
 
@@ -33,7 +33,7 @@ action "eth_inbox"
 # }}}
 
 # outlook {{{
-$path_outlook = "${path}/outlook"
+$path_outlook = "${raw_dir}/outlook"
 account "outlook"
     maildirs "${path_outlook}/.INBOX/"
 
