--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -11,7 +11,6 @@ macro index co \
 # }}}
 
 virtual-mailboxes \
-    "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
-    "_OUTLOOK_X" "notmuch://?query=folder:outlook/.x"
+    "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
