Remove nm-|X| box for xyz

--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -6,7 +6,6 @@ folder-hook _XYZ_ "source $my_conf"
 # }}}
 
 virtual-mailboxes \
-    "_XYZ_INBOX" "notmuch://?query=folder:xyz/.INBOX" \
-    "_XYZ_X" "notmuch://?query=folder:xyz/.Folders.x"
+    "_XYZ_INBOX" "notmuch://?query=folder:xyz/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
