Simplify nam'g of nm-|INBOX| boxes

--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -2,7 +2,7 @@
 set my_conf = "~/.config/neomutt/box/specific/outlook/specific.conf"
 
 folder-hook mail/raw/outlook "source $my_conf"
-folder-hook _OUTLOOK_ "source $my_conf"
+folder-hook _OUTLOOK "source $my_conf"
 
 macro index co \
 "<enter-command>source $my_conf<Return>\
@@ -11,6 +11,6 @@ macro index co \
 # }}}
 
 virtual-mailboxes \
-    "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX"
+    "_OUTLOOK" "notmuch://?query=folder:outlook/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
