--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -2,10 +2,10 @@
 set my_conf = "~/.config/neomutt/box/specific/xyz/specific.conf"
 
 folder-hook mail/raw/xyz "source $my_conf"
-folder-hook _XYZ_ "source $my_conf"
+folder-hook _XYZ "source $my_conf"
 # }}}
 
 virtual-mailboxes \
-    "_XYZ_INBOX" "notmuch://?query=folder:xyz/.INBOX"
+    "_XYZ" "notmuch://?query=folder:xyz/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
