Add |cx|-bind to lead xyz-conf

--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -3,6 +3,11 @@ set my_conf = "~/.config/neomutt/box/specific/xyz/specific.conf"
 
 folder-hook mail/raw/xyz "source $my_conf"
 folder-hook _XYZ "source $my_conf"
+
+macro index cx \
+"<enter-command>source $my_conf<Return>\
+<check-stats>\
+" "eth info"
 # }}}
 
 virtual-mailboxes \
