Use header-cache

--- a/.config/neomutt/conf/read.conf
+++ b/.config/neomutt/conf/read.conf
@@ -2,4 +2,6 @@ auto_view text/plain text/html
 
 alternative_order text/plain text/* image/*
 
+set header_cache = ~/.cache/neomutt/
+
 # vim: filetype=neomuttrc foldmethod=marker
