Add fdm action for mov'g to all-trash

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -5,6 +5,9 @@ $all_dir = "%h/mail/all/"
 action "inbox"
     maildir "${raw_dir}/Inbox"
 
+action "move_all_trash"
+    maildir "${all_dir}/.trash"
+
 action "keep"
     keep
 
@@ -31,6 +34,39 @@ account "eth"
 $path_outlook = "${raw_dir}/outlook"
 account "outlook"
     maildirs "${path_outlook}/.INBOX/"
+# }}}
+
+# move to trash {{{
+# NOTE:
+# 1. (vim-)convert raw-addresses to criteria
+#   :'<,'>sm/\(.*\)/    "^From:.*\1" in headers or/
+
+match
+    "^From:.*paypal@mail.paypal.de" in headers or
+    "^From:.*ubs_switzerland@mailing.ubs.com" in headers or
+    #
+    "^From:.*no-reply@accounts.google.com" in headers or
+    "^From:.*@.*instagram.*" in headers or
+    "^From:.*kuiper.sina@bcg.com" in headers or
+    #
+    "^From:.*email.campaign@sg.booking.com" in headers or
+    "^From:.*mail@e.milesandmore.com" in headers or
+    "^From:.*mail@mailing.milesandmore.com" in headers or
+    "^From:.*newsletter@your.lufthansa-group.com" in headers or
+    #
+    "^From:.*no-reply@business.amazon.com" in headers or
+    "^From:.*store-news@amazon.com" in headers or
+    "^From:.*vfe-campaign-response@amazon.com" in headers or
+    "^From:.*customer-reviews-messages@amazon.com" in headers or
+    "^From:.*marketplace-messages@amazon.com" in headers or
+    #
+    "^From:.*productnews@galaxus.ch" in headers or
+    "^From:.*resale@galaxus.ch" in headers or
+    "^From:.*noreply@notifications.galaxus.ch" in headers or
+    "^From:.*galaxus@community.galaxus.ch" in headers or
+    "^From:.*ux@digitecgalaxus.ch" in headers
+    #
+    action "move_all_trash"
 # }}}
 
 # delete {{{
