Separate ~/mail and raw/ for raw-accounts in mutt

--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -11,8 +11,8 @@ macro index ce \
 # }}}
 
 virtual-mailboxes \
-    "_ETH" "notmuch://?query=folder:eth/.INBOX" \
-    "_ETH_X" "notmuch://?query=folder:eth/.x" \
-    "_ETH_Z" "notmuch://?query=folder:eth/.z"
+    "_ETH" "notmuch://?query=folder:raw/eth/.INBOX" \
+    "_ETH_X" "notmuch://?query=folder:raw/eth/.x" \
+    "_ETH_Z" "notmuch://?query=folder:raw/eth/.z"
 
 # vim: filetype=neomuttrc foldmethod=marker
