--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -1,4 +1,4 @@
-set nm_default_url = "notmuch://$my_mail_raw_path/"
+set nm_default_url = "notmuch://$my_mail_path"
 
 # exclude these (implicit) tags from %g
 set hidden_tags = \
