--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -11,6 +11,6 @@ macro index cx \
 # }}}
 
 virtual-mailboxes \
-    "_XYZ" "notmuch://?query=folder:raw/xyz/.INBOX"
+    "_XYZ" "notmuch://?query=folder:$my_mail_raw_relative_path/xyz/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
