--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -1,5 +1,5 @@
 set my_mail_path = "$HOME/mail/"
-set my_mail_raw_relative_path = "raw/"
+set my_mail_raw_relative_path = "raw"
 set my_mail_raw_absolute_path = "$my_mail_path/$my_mail_raw_relative_path"
 # placeholder (to silence warning upon launch)
 set folder = $my_mail_raw_absolute_path
