--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -11,6 +11,6 @@ macro index co \
 # }}}
 
 virtual-mailboxes \
-    "_OUTLOOK" "notmuch://?query=folder:raw/outlook/.INBOX"
+    "_OUTLOOK" "notmuch://?query=folder:$my_mail_raw_relative_path/outlook/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
