--- a/.config/neomutt/box/specific/xyz/specific.conf
+++ b/.config/neomutt/box/specific/xyz/specific.conf
@@ -22,7 +22,7 @@ ss\
 macro index /b "\
 <enter-command>\
 exec vfolder-from-query<Return>\
-folder:/$my_box_relative_path/ and \
+folder:/$my_mail_raw_relative_path\\/$my_box_relative_path/ and \
 " "query box"
 
 # compose {{{
