Use raw-relative-path for non-nm folder-hook

--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -1,7 +1,7 @@
 # source {{{
 set my_conf = "~/.config/neomutt/box/specific/eth/specific.conf"
 
-folder-hook mail/raw/eth "source $my_conf"
+folder-hook $my_mail_raw_relative_path/eth "source $my_conf"
 folder-hook _ETH "source $my_conf"
 
 macro index ce \
