--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -1,7 +1,7 @@
 # source {{{
 set my_conf = "~/.config/neomutt/box/specific/xyz/specific.conf"
 
-folder-hook mail/raw/xyz "source $my_conf"
+folder-hook $my_mail_raw_relative_path/xyz "source $my_conf"
 folder-hook _XYZ "source $my_conf"
 
 macro index cx \
