--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -1,7 +1,7 @@
 # source {{{
 set my_conf = "~/.config/neomutt/box/specific/outlook/specific.conf"
 
-folder-hook mail/raw/outlook "source $my_conf"
+folder-hook $my_mail_raw_relative_path/outlook "source $my_conf"
 folder-hook _OUTLOOK "source $my_conf"
 
 macro index co \
