--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -9,6 +9,7 @@ _SENT"
 
 virtual-mailboxes \
     "INBOX" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*\\/\\.INBOX/" \
-    "MAIN" "notmuch://?query=tag:MAIN"
+    "MAIN" "notmuch://?query=tag:MAIN" \
+    "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash"
 
 # vim: filetype=neomuttrc foldmethod=marker
