--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -7,6 +7,8 @@ set my_mail_all_absolute_path = "$my_mail_path/$my_mail_all_relative_path"
 # placeholder (to silence warning upon launch)
 set folder = $my_mail_raw_absolute_path
 
+set trash = "$my_mail_all_absolute_path/.trash"
+
 set mbox_type = Maildir
 
 # do NOT distinguish |old| from unread/new
