Add "Test Mail" to auto-trash

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -65,6 +65,10 @@ match
     "^From:.*ux@digitecgalaxus.ch" in headers
     #
     action "move_all_trash"
+
+match
+    "^Subject:.*Test Mail.*" in headers
+    action "move_all_trash"
 # }}}
 
 # delete {{{
