Regroup account-specific & common configs

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -1,5 +1,20 @@
-# common {{{
+# account-specific {{{
 $raw_dir = "%h/mail/raw/"
+
+$path_xyz = "${raw_dir}/xyz"
+account "xyz"
+    maildirs "${path_xyz}/.INBOX/"
+
+$path_eth = "${raw_dir}/eth"
+account "eth"
+    maildirs "${path_eth}/.INBOX/"
+
+$path_outlook = "${raw_dir}/outlook"
+account "outlook"
+    maildirs "${path_outlook}/.INBOX/"
+# }}}
+
+# common {{{
 $all_dir = "%h/mail/all/"
 
 action "move_all_trash"
@@ -13,24 +28,6 @@ action "delete"
 
 action "print"
     stdout
-# }}}
-
-# xyz {{{
-$path_xyz = "${raw_dir}/xyz"
-account "xyz"
-    maildirs "${path_xyz}/.INBOX/"
-# }}}
-
-# eth {{{
-$path_eth = "${raw_dir}/eth"
-account "eth"
-    maildirs "${path_eth}/.INBOX/"
-# }}}
-
-# outlook {{{
-$path_outlook = "${raw_dir}/outlook"
-account "outlook"
-    maildirs "${path_outlook}/.INBOX/"
 # }}}
 
 # move to trash {{{
