Split spam-addr into blocks

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -85,11 +85,13 @@ match
     "^From:.*@.*preapp1003\.com.*" in headers or
     "^From:.*@.*magnusmonitors\.com.*" in headers or
     "^From:.*@.*oasdehe.com.*" in headers or
-    "^From:.*@email.wolfram.com.*" in headers or
-    "^From:.*@go.mathworks.com.*" in headers or
-    "^From:.*@sion.ais.ne.jp.*" in headers or
-    "^From:.*info@didareshop.com" in headers or
-    "^From:apis@tisknise.cz" in headers
+    "^From:.*@.*sion\.ais\.ne\.jp.*" in headers or
+    "^From:.*@.*didareshop\.com.*" in headers or
+    #
+    "^From:.*@email\.wolfram\.com" in headers or
+    "^From:.*@go\.mathworks\.com" in headers or
+    #
+    "^From:apis@tisknise\.cz" in headers
     action "delete"
 # }}}
 
