Add vim-fold for setup

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -1,3 +1,7 @@
+# setup {{{
+# mail-directories {{{
+$all_dir = "%h/mail/all/"
+
 # account-specific {{{
 $raw_dir = "%h/mail/raw/"
 
@@ -13,10 +17,9 @@ $path_outlook = "${raw_dir}/outlook"
 account "outlook"
     maildirs "${path_outlook}/.INBOX/"
 # }}}
+# }}}
 
-# common {{{
-$all_dir = "%h/mail/all/"
-
+# action {{{
 action "move_all_trash"
     maildir "${all_dir}/.trash"
 
@@ -28,6 +31,7 @@ action "delete"
 
 action "print"
     stdout
+# }}}
 # }}}
 
 # move to trash {{{
