Add vim-fold for |the undesirables|

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -34,6 +34,7 @@ action "print"
 # }}}
 # }}}
 
+# the undesirables {{{
 # move to trash {{{
 # NOTE:
 # 1. (vim-)convert raw-addresses to criteria
@@ -73,7 +74,7 @@ match
     action "move_all_trash"
 # }}}
 
-# delete {{{
+# direct deletion {{{
 # spam
 match
     "^From:.*@.*kraftangan\.gov\.my" in headers or
@@ -98,6 +99,7 @@ match
     #
     "^From:apis@tisknise\.cz" in headers
     action "delete"
+# }}}
 # }}}
 
 # catch all
