Auto-run fdm for sync-binds with |nm new|

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -155,6 +155,7 @@ macro index sm "\
 " "commit mail"
 macro index sn "\
 <enter-command>set wait_key=no<Return>\
+<shell-escape>fdm fetch<Return>\
 <shell-escape>notmuch new<Return>\
 <enter-command>set wait_key=yes<Return>\
 <check-stats>\
