Add more spam-addr

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -93,6 +93,7 @@ match
     "^From:.*@.*oasdehe.com.*" in headers or
     "^From:.*@.*sion\.ais\.ne\.jp.*" in headers or
     "^From:.*@.*didareshop\.com.*" in headers or
+    "^From:.*@catpro\.io" in headers or
     #
     "^From:.*@email\.wolfram\.com" in headers or
     "^From:.*@go\.mathworks\.com" in headers or
