Use cross-account draft in mutt

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -8,6 +8,7 @@ set my_mail_all_absolute_path = "$my_mail_path/$my_mail_all_relative_path"
 set folder = $my_mail_raw_absolute_path
 
 set trash = "$my_mail_all_absolute_path/.trash"
+set postponed = "$my_mail_all_absolute_path/.draft"
 
 set mbox_type = Maildir
 
