Add bind for reus'g draft

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -140,6 +140,7 @@ macro index rt "\
 bind index mm mail
 bind index mb bounce-message
 bind index mf forward-message
+bind index md recall-message
 bind index mr reply
 
 bind index l display-message
