Do NOT auto-prompt for reus'g draft

--- a/.config/neomutt/conf/send.conf
+++ b/.config/neomutt/conf/send.conf
@@ -4,4 +4,7 @@ set editor = "nvim"
 set auto_edit = yes
 set edit_headers = yes
 
+# do NOT prompt for reusing draft
+set recall = no
+
 # vim: filetype=neomuttrc foldmethod=marker
