--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -10,7 +10,6 @@ _SENT"
 virtual-mailboxes \
     "INBOX" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*\\/\\.INBOX/" \
     "MAIN" "notmuch://?query=tag:MAIN" \
-    "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash" \
-    "DRAFT" "notmuch://?query=folder:$my_mail_all_relative_path/.draft"
+    "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash"
 
 # vim: filetype=neomuttrc foldmethod=marker
