--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -8,8 +8,8 @@ _SYS,_X,\
 _SENT"
 
 virtual-mailboxes \
-    "INBOX" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*\\/\\.INBOX/" \
     "MAIN" "notmuch://?query=tag:MAIN" \
-    "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash"
+    "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash" \
+    "INBOX" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*\\/\\.INBOX/"
 
 # vim: filetype=neomuttrc foldmethod=marker
