--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -152,7 +152,7 @@ bind index L next-thread
 
 # sync {{{
 macro index sm "\
-<sync-mailbox><Enter><check-stats>\
+<sync-mailbox><Return><check-stats>\
 " "commit mail"
 macro index sn "\
 <enter-command>set wait_key=no<Return>\
