Do NOT auto-switch to boxes with yy

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -172,7 +172,7 @@ sn\
 set confirm_append = no
 macro index yy "\
 <tag-prefix>\
-<save-message>?<toggle-mailboxes>\
+<save-message>?\
 " "move to box"
 
 # delete {{{
