Group binds for changing box

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -81,15 +81,24 @@ bind generic q exit
 # }}}
 
 # index {{{
-bind index cc sidebar-toggle-visible
-macro index cd "<change-folder>?" "change-box"
+bind index l display-message
 
+bind index za collapse-thread
+bind index zA collapse-all
+bind index H previous-thread
+bind index L next-thread
+
+# change box {{{
 bind index <Enter> sidebar-open
 bind index <Return> sidebar-open
 bind index \cp sidebar-prev
 bind index \cn sidebar-next
 macro index \ck "\cp\cp\cp\cp" "box-kkkk"
 macro index \cj "\cn\cn\cn\cn" "box-jjjj"
+
+bind index cc sidebar-toggle-visible
+macro index cd "<change-folder>?" "change-box"
+# }}}
 
 # query {{{
 macro index // "\
@@ -142,13 +151,6 @@ bind index mb bounce-message
 bind index mf forward-message
 bind index md recall-message
 bind index mr reply
-
-bind index l display-message
-
-bind index za collapse-thread
-bind index zA collapse-all
-bind index H previous-thread
-bind index L next-thread
 
 # sync {{{
 macro index sm "\
