--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -106,6 +106,22 @@ sn\
 " "commit"
 # }}}
 
+# select (mutt-tag) {{{
+macro index tt <tag-entry>k "tag"
+macro index tk <tag-entry>kk "tag, k"
+macro index tj <tag-entry> "tag, j"
+macro index tK tktktktk "tag, kkkk"
+macro index tJ tjtjtjtj "tag, jjjj"
+
+bind index t. tag-pattern
+bind index t, untag-pattern
+macro index t> "<tag-pattern>.<Return>" "tag *"
+macro index t< "<untag-pattern>.<Return>" "untag *"
+
+macro index "t;" "<tag-prefix-cond>" "tag:<bind>"
+macro index t: "<enter-command>exec tag-prefix-cond " "tag:<command>"
+# }}}
+
 # change box {{{
 bind index <Enter> sidebar-open
 bind index <Return> sidebar-open
@@ -198,22 +214,6 @@ macro index du "\
 <tag-prefix>\
 <undelete-message>\
 " "undelete"
-# }}}
-
-# tag {{{
-macro index tt <tag-entry>k "tag"
-macro index tk <tag-entry>kk "tag, k"
-macro index tj <tag-entry> "tag, j"
-macro index tK tktktktk "tag, kkkk"
-macro index tJ tjtjtjtj "tag, jjjj"
-
-bind index t. tag-pattern
-bind index t, untag-pattern
-macro index t> "<tag-pattern>.<Return>" "tag *"
-macro index t< "<untag-pattern>.<Return>" "untag *"
-
-macro index "t;" "<tag-prefix-cond>" "tag:<bind>"
-macro index t: "<enter-command>exec tag-prefix-cond " "tag:<command>"
 # }}}
 
 bind index aa view-attachments
