Rename vim-fold for search

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -134,7 +134,7 @@ bind index cc sidebar-toggle-visible
 macro index cd "<change-folder>?" "change-box"
 # }}}
 
-# query {{{
+# search {{{
 macro index // "\
 <enter-command>exec vfolder-from-query<Return>\
 " "nm-*"
