Add vim-fold for writ'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -180,11 +180,14 @@ macro index rt "\
 " "retag-tagged"
 # }}}
 
+# write {{{
 bind index mm mail
+bind index md recall-message
+
+bind index mr reply
 bind index mb bounce-message
 bind index mf forward-message
-bind index md recall-message
-bind index mr reply
+# }}}
 
 # do not prompt for confirming box-moving
 set confirm_append = no
