Add vim-fold for edit'g message

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -170,6 +170,7 @@ bind index \; limit
 macro index <Backspace> <limit>all<Return> "limit reset"
 # }}}
 
+# edit message {{{
 # retag {{{
 macro index rr "\
 <enter-command>exec tag-prefix modify-labels <Return>\
@@ -178,15 +179,6 @@ macro index rr "\
 macro index rt "\
 <enter-command>exec tag-prefix-cond modify-labels<Return>\
 " "retag-tagged"
-# }}}
-
-# write {{{
-bind index mm mail
-bind index md recall-message
-
-bind index mr reply
-bind index mb bounce-message
-bind index mf forward-message
 # }}}
 
 # do not prompt for confirming box-moving
@@ -217,6 +209,16 @@ macro index du "\
 <tag-prefix>\
 <undelete-message>\
 " "undelete"
+# }}}
+# }}}
+
+# write {{{
+bind index mm mail
+bind index md recall-message
+
+bind index mr reply
+bind index mb bounce-message
+bind index mf forward-message
 # }}}
 
 bind index aa view-attachments
