Add default compose-format

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -94,6 +94,10 @@ set pager_format = "\
 "
 # }}}
 
+# compose {{{
+set compose_format = "-- NeoMutt: Compose  [Approx. msg size: %l   Atts: %a]%>-"
+# }}}
+
 # show all in file-browser
 set mask = "^"
 
