Simplify compose-format

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -95,7 +95,11 @@ set pager_format = "\
 # }}}
 
 # compose {{{
-set compose_format = "-- NeoMutt: Compose  [Approx. msg size: %l   Atts: %a]%>-"
+set compose_format = "\
+%* \
+(#%a, ~%l) \
+\
+"
 # }}}
 
 # show all in file-browser
