--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -102,6 +102,10 @@ set compose_format = "\
 "
 # }}}
 
+# attachment {{{
+set attach_format = "%u%D%I %t%4n %T%.40d%> [%.7m/%.10M, %.6e%?C?, %C?, %s]"
+# }}}
+
 # show all in file-browser
 set mask = "^"
 
