Simplify attachment-format

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -103,7 +103,11 @@ set compose_format = "\
 # }}}
 
 # attachment {{{
-set attach_format = "%u%D%I %t%4n %T%.40d%> [%.7m/%.10M, %.6e%?C?, %C?, %s]"
+set attach_format = "\
+ %n [%?t?%t&?%I%?u?%u&?%?D?%D&?]  %?T?%T &?%.29d \
+%* \
+[%m/%M%?C?(%C)&?, %.6e]  %4s \
+"
 # }}}
 
 # show all in file-browser
