Rework mailbox-folder-format

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -112,7 +112,11 @@ set attach_format = "\
 
 # show all in file-browser
 set mask = "^"
-set mailbox_folder_format = "%2C %?n?%6n&%6 ? %6m %i"
+set mailbox_folder_format = "\
+ %C  %i\
+%* \
+%f \
+"
 
 # color {{{
 # genereal {{{
