Add default folder-format

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -117,6 +117,7 @@ set mailbox_folder_format = "\
 %* \
 %f \
 "
+set folder_format = "%2C %t %N %F %2l %-8.8u %-8.8g %8s %d %i"
 
 # color {{{
 # genereal {{{
