Rework folder-format

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -117,7 +117,11 @@ set mailbox_folder_format = "\
 %* \
 %f \
 "
-set folder_format = "%2C %t %N %F %2l %-8.8u %-8.8g %8s %d %i"
+set folder_format = "\
+ %C  %i  %?n?%n/&?%?m?%m&?\
+%* \
+%4s   %D \
+"
 
 # color {{{
 # genereal {{{
