Group config for |browser|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -110,18 +110,22 @@ set attach_format = "\
 "
 # }}}
 
+# browser {{{
 # show all in file-browser
 set mask = "^"
+
 set mailbox_folder_format = "\
  %C  %i\
 %* \
 %f \
 "
+
 set folder_format = "\
  %C  %i  %?n?%n/&?%?m?%m&?\
 %* \
 %4s  %D \
 "
+# }}}
 
 # color {{{
 # genereal {{{
