--- a/.fdm.conf
+++ b/.fdm.conf
@@ -65,7 +65,12 @@ match
     "^From:.*resale@galaxus\.ch" in headers or
     "^From:.*noreply@notifications\.galaxus\.ch" in headers or
     "^From:.*galaxus@community\.galaxus\.ch" in headers or
-    "^From:.*ux@digitecgalaxus\.ch" in headers
+    "^From:.*ux@digitecgalaxus\.ch" in headers or
+    #
+    "^From:.*outgoing@office\.iaeste\.ch" in headers or
+    "^From:.*exchange@ethz\.ch" in headers or
+    "^From:.*careercenter@news\.ethz\.ch" in headers or
+    "^From:.*didaktischeausbildung@ethz\.ch" in headers
     #
     action "move_all_trash"
 
@@ -94,11 +99,15 @@ match
     "^From:.*@.*sion\.ais\.ne\.jp.*" in headers or
     "^From:.*@.*didareshop\.com.*" in headers or
     "^From:.*@catpro\.io" in headers or
+    "^From:.*Ashish.Biswas@icar.gov.in" in headers or
     #
     "^From:.*@email\.wolfram\.com" in headers or
     "^From:.*@go\.mathworks\.com" in headers or
+    "^From:.*diversity@ethz\.ch" in headers or
+    "^From:.*gastro@news\.ethz\.ch" in headers or
     #
-    "^From:apis@tisknise\.cz" in headers
+    "^From:.*apis@tisknise\.cz" in headers
+    #
     action "delete"
 # }}}
 # }}}
