--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -21,7 +21,11 @@ set sidebar_new_mail_only = no
 set sidebar_width = 19
 set sidebar_divider_char = ' '
 
-set sidebar_format = " %D %* %?N?%N/&?%?S?%S&?"
+set sidebar_format = "\
+%D \
+%* \
+%?N?%N/&?%?S?%S&?\
+"
 # }}}
 
 # index {{{
