Add display-filter to remove redundant info

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -91,6 +91,13 @@ set sort_aux = date
 # partially show |index| above |pager|
 set pager_index_lines = 7
 
+set display_filter = "\
+grep -v '\\\[-- Autoview using ' | \
+grep -v '\\\[-- Type: ' | \
+grep -v ' is unsupported (use ' | \
+cat -s \
+"
+
 set pager_format = "\
 <%.59s>   (%.39a  %GS%GE>  %?r?%.39r&[]?)  \
 %* \
