--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -98,6 +98,10 @@ grep -v ' is unsupported (use ' | \
 cat -s \
 "
 
+unhdr_order *
+hdr_order \
+subject date from to cc
+
 set pager_format = "\
 <%.59s>   (%.39a  %GS%GE>  %?r?%.39r&[]?)  \
 %* \
