Explicitly whitelist headers

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -98,9 +98,16 @@ grep -v ' is unsupported (use ' | \
 cat -s \
 "
 
+# header {{{
+ignore *
+unignore \
+subject date from to cc \
+X-Mailer Mail-System-Version User-Agent Content-Language
+
 unhdr_order *
 hdr_order \
 subject date from to cc
+# }}}
 
 set pager_format = "\
 <%.59s>   (%.39a  %GS%GE>  %?r?%.39r&[]?)  \
