Add moodle&piazza to auto-trash

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -70,7 +70,9 @@ match
     "^From:.*outgoing@office\.iaeste\.ch" in headers or
     "^From:.*exchange@ethz\.ch" in headers or
     "^From:.*careercenter@news\.ethz\.ch" in headers or
-    "^From:.*didaktischeausbildung@ethz\.ch" in headers
+    "^From:.*didaktischeausbildung@ethz\.ch" in headers or
+    "^From:.*noreply@moodle-app2\.let\.ethz\.ch" in headers or
+    "^From:.*no-reply@piazza\.com" in headers
     #
     action "move_all_trash"
 
